--- a/R/lv_pass_2_feature_selection_graphs.Rmd
+++ b/R/lv_pass_2_feature_selection_graphs.Rmd
@@ -69,8 +69,9 @@ plotvariousgraphs(train_data,individualplots=TRUE,crossplot=TRUE,byfactcols=FALS
 # 4. It wil generate a decision tree based on single column at a time.
 # 5. It will generate a decision tree based on 2 column at a time.
 
+
 frml1 <- as.formula('Class ~ .')
-findusefulfeatures(train_data,alpha = 0.05,ranking='accuracy',k=20,frml1,ntree=100,cp = 0.001)
+findusefulfeatures(train_data,alpha = 0.05,ranking='accuracy',k=20,frml1,ntree=100,cp = 0.001,valid_data)
 
 options(warn=0)
 ```
