--- a/R/Part3_modelling_add_interaction_col_try_lr_multfolds.Rmd
+++ b/R/Part3_modelling_add_interaction_col_try_lr_multfolds.Rmd
@@ -44,6 +44,7 @@ for (i in seq(numfolds))
   print (paste('fold',i))
   print 
  td <- train_data[flds[[i]],]
+ td <- rbind(td,td_u)
  print(head(td))
 
 
